--- a/8.html
+++ b/8.html
@@ -10,10 +10,10 @@
 </head>
 
 <body>
+<div id="outer">
 <div id="title" video="https://www.youtube.com/watch?v=2YmAdr9s0dE">
 	<h3>Pain</h3>
 	<div id="youtubeicon"><img src="./You-tube-rect.png" width="40px" /></div>	
-	<!---<div id="back"><img src="./back.png" width="40px" /></div>	--->
 </div>
 <div id="youtubevideo">
 	<iframe class="youtube-player" 
@@ -103,7 +103,7 @@
 <p>Center to Advance Palliative Care   <a href="http://www.capc.org/">http://www.capc.org/</a></p>
 </div>
 
-
+</div>
 
 </body>
 
